# work-overtime-calculator

./: .gitignore  README.md  index.html  overtime_tracker_app.jsx  package-lock.json  package.json  server.js  tailwind.config.js  vite.config.js
electron/: main.cjs  preload.cjs
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
