[package]
name = "overtime-tracker-app"
version = "1.0.1"
description = "Desktop overtime tracker for monthly work-hour logging."
authors = ["Codex"]
edition = "2021"

[[bin]]
name = "overtime-hours-calculator"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
